overhaul of examples, with actual Java graphics