@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+ * Copyright 2026 The streamingalgorithms authors. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License").
  * You may not use this file except in compliance with the License.
@@ -16,16 +16,13 @@
 package org.streamingalgorithms.randomcutforest.examples.summarization;
 
 import static java.lang.Math.abs;
-import static org.streamingalgorithms.randomcutforest.CommonUtils.toFloatArray;
 
-import java.util.Arrays;
 import java.util.Random;
-import java.util.function.BiFunction;
 
 import org.streamingalgorithms.randomcutforest.examples.Example;
+import org.streamingalgorithms.randomcutforest.examples.datasets.Clusters;
 import org.streamingalgorithms.randomcutforest.returntypes.SampleSummary;
 import org.streamingalgorithms.randomcutforest.summarization.Summarizer;
-import org.streamingalgorithms.randomcutforest.testutils.NormalMixtureTestData;
 
 /**
  * The following example is based off a test of summarization and provides an
@@ -33,29 +30,34 @@ import org.streamingalgorithms.randomcutforest.testutils.NormalMixtureTestData;
  * clustering takes a distance function from (float[],float []) into double as
  * input, along with a maximum number of allowed clusters and provides a summary
  * which contains the list of cluster centers as "typical points" along with
- * relative likelihood.
- *
- * The specific example below corresponds to 2*d clusters (one each in +ve and
- * -ve axis for each of the d dimensions) where d is chosen at random between 3
- * and 13. The clusters are designed to almost touch -- but are separable (with
- * high probability) and should be discoverable separately. Note that the
- * algorithm does not require the knowledge of the true number of clusters (2*d)
- * but is run with a maximum allowed number 5*d.
+ * relative likelihood. The specific example below corresponds to 2*d clusters
+ * (one each in +ve and -ve axis for each of the d dimensions) where d is chosen
+ * at random between 3 and 13. The clusters are designed to almost touch -- but
+ * are separable (with high probability) and should be discoverable separately,
+ * in particular different projections would discover them separately. Note that
+ * the algorithm does not require the knowledge of the true number of clusters
+ * (2*d) but is run with a maximum allowed number 5*d.
  */
-public class RCFSummarizeExample implements Example {
+/*
+ * mvn -pl examples -am install -DskipTests java --add-modules
+ * jdk.incubator.vector -jar examples/target/*-jar-with-dependencies.jar
+ * rcf_summarize
+ */
+
+public class CentroidSummarize implements Example {
 
     public static void main(String[] args) throws Exception {
-        new org.streamingalgorithms.randomcutforest.examples.summarization.RCFSummarizeExample().run();
+        new CentroidSummarize().run();
     }
 
     @Override
     public String command() {
-        return "RCF_Summarize_Example";
+        return "centroid_summarize";
     }
 
     @Override
     public String description() {
-        return "Example of using RCF Summarization";
+        return "Example of using centroid Summarization";
     }
 
     @Override
@@ -65,7 +67,7 @@ public class RCFSummarizeExample implements Example {
         int newDimensions = random.nextInt(10) + 3;
         int dataSize = 200000;
 
-        float[][] points = getData(dataSize, newDimensions, random.nextInt(), Summarizer::L2distance);
+        float[][] points = Clusters.getData(dataSize, newDimensions, random.nextInt(), Summarizer::L2distance);
 
         SampleSummary summary = Summarizer.l2summarize(points, 5 * newDimensions, 42);
         System.out.println(
@@ -107,45 +109,6 @@ public class RCFSummarizeExample implements Example {
             }
         }
         System.out.print("]");
-    }
-
-    public float[][] getData(int dataSize, int newDimensions, int seed, BiFunction<float[], float[], Double> distance) {
-        double baseMu = 0.0;
-        double baseSigma = 1.0;
-        double anomalyMu = 0.0;
-        double anomalySigma = 1.0;
-        double transitionToAnomalyProbability = 0.0;
-        // ignoring anomaly cluster for now
-        double transitionToBaseProbability = 1.0;
-        Random prg = new Random(0);
-        NormalMixtureTestData generator = new NormalMixtureTestData(baseMu, baseSigma, anomalyMu, anomalySigma,
-                transitionToAnomalyProbability, transitionToBaseProbability);
-        double[][] data = generator.generateTestData(dataSize, newDimensions, seed);
-        float[][] floatData = new float[dataSize][];
-
-        float[] allZero = new float[newDimensions];
-        float[] sigma = new float[newDimensions];
-        Arrays.fill(sigma, 1f);
-        double scale = distance.apply(allZero, sigma);
-
-        for (int i = 0; i < dataSize; i++) {
-            // shrink, shift at random
-            int nextD = prg.nextInt(newDimensions);
-            for (int j = 0; j < newDimensions; j++) {
-                data[i][j] *= 1.0 / (3.0);
-                // standard deviation adds up across dimension; taking square root
-                // and using s 3 sigma ball
-                if (j == nextD) {
-                    if (prg.nextDouble() < 0.5)
-                        data[i][j] += 2.0 * scale;
-                    else
-                        data[i][j] -= 2.0 * scale;
-                }
-            }
-            floatData[i] = toFloatArray(data[i]);
-        }
-
-        return floatData;
     }
 
 }
